fix spacing

--- a/src/Menu.css
+++ b/src/Menu.css
@@ -11,6 +11,7 @@
     padding-top: 26px;
     z-index: 7;
     border-right: 1px solid var(--text-colors-100, #E4E4E4);
+    visibility: hidden;
 }
 
 .menu-list {
@@ -76,6 +77,5 @@
 }
 
 .hideNav {
-    visibility: hidden;;
     animation: hideNav 1s ease forwards;
 }
